--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 					<li>
 						<a href="" style="background: #49AFCD;">
 							<label for="headsearch" class="ui-hidden-accessible">搜索...</label>
-							<input id="headsearch" type="search" name="headsearch" value="搜索...">
+							<input id="headsearch" type="search" name="headsearch"  placeholder="搜索...">
 						</a>
 						<!--<a href="#" data-icon = "arrow-r"></a>-->
 						<a href="#RightPanel" data-icon = "user" style="background: #49AFCD;"></a>
