--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
         <div id="search" data-role="page">
         	
         	<div data-role = "header">
-        		<input type="search" autofocus="autofocus">
+        		<input type="search" autofocus="autofocus"  placeholder="搜索...">
         	</div>
         	
         	<div class="ui-content">
